@@ -1,3 +1,8 @@
+2011-10-03  Jie Zhang  <jie.zhang@analog.com>
+
+  * src/tap/cable/ice100.c (ice_read_hex_file): Free input_line
+    before return.
+
 2011-09-29  Jie Zhang  <jie.zhang@analog.com>
 
   * src/tap/cable/generic_usbconn_list.h (ice100Bw): Add.
